feat: add form upsert components for the ticket feature

--- a/package.json
+++ b/package.json
@@ -20,17 +20,21 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@t3-oss/env-nextjs": "^0.13.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.44.2",
     "lucide-react": "^0.519.0",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
     "postgres": "^3.4.7",
     "react": "^19.0.0",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.67"
