--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,7 +2,7 @@
   "trailingComma": "es5",
   "semi": true,
   "singleQuote": false,
-  "tabwidth": 2,
+  "tabWidth": 2,
   "jsxSingleQuote": false,
   "plugins": [
     "prettier-plugin-tailwindcss",
@@ -14,7 +14,5 @@
     "<THIRD_PARTY_MODULES>",
     "",
     "^[.]"
-  ],
-  "importOrderSeparation": true,
-  "importOrderSortSpecifiers": true
+  ]
 }
