--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.44.2",
     "fastest-levenshtein": "^1.0.16",
+    "inngest": "^3.39.2",
     "lucide-react": "^0.519.0",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
